upgrade to version 0.1.0 - details